fixing the referance to the back-end quote api

--- a/Quote-of-the-day.html
+++ b/Quote-of-the-day.html
@@ -27,6 +27,6 @@
         </div>
 
         <!--Link to the backend api-->
-        <script src="/Back-end/Quote-api.js"></script>
+        <script src="Quote-api.js"></script>
     </body>
     </html>
