--- a/change.html
+++ b/change.html
@@ -22,6 +22,7 @@
         <div>
             <!-- Button that triggers fetching a new quote when clicked -->
             <button onclick="fetchQuote()">New quote</button>
+            <a href="Eloquent-expressions.html"> Home</a>
         </div>
     </div>
 
