Adding the button class to the code

--- a/change.html
+++ b/change.html
@@ -22,7 +22,7 @@
         <div>
             <!-- Button that triggers fetching a new quote when clicked -->
             <button onclick="fetchQuote()">New quote</button>
-            <a href="Eloquent-expressions.html"> Home</a>
+            <a href="Eloquent-expressions.html" class="Button"> Home</a>
         </div>
     </div>
 
