--- a/change.html
+++ b/change.html
@@ -5,28 +5,29 @@
     <meta charset="UTF-8">
     <!-- Sets the viewport to make the website responsive on different devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Title of the webpage displayed in the broswer tab-->
+    <!-- Title of the webpage displayed in the browser tab -->
     <title>Quotes about Change</title>
-    <!--Link to external CSS stylesheets for styling the page-->
+    <!-- Link to external CSS stylesheets for styling the page -->
     <link rel="stylesheet" href="change.css">
 </head>
 <body>
-    <!-- Container for displaying the quote-->
+    <!-- Container for displaying the quote -->
     <div class="quote-box">
-        <!--Header for the section-->
+        <!-- Header for the section -->
         <h2>Quotes about Change</h2>
-        <!--Span element to show the quote text-->
+        <!-- Span element to show the quote text -->
         <blockquote id="quote-text">Fetching quote</blockquote>
-        <!--Container for the button to fetch a new quote-->
+        <!-- Container for the button to fetch a new quote -->
         <span id="quote-author"></span>
         <div>
             <!-- Button that triggers fetching a new quote when clicked -->
             <button onclick="fetchQuote()">New quote</button>
-            <a href="Eloquent-expressions.html" class="Button"> Home</a>
+            <!-- Link styled as a button -->
+            <a href="Eloquent-expressions.html" class="button">Home</a>
         </div>
     </div>
 
-    <!--Link to the backend api-->
-    <script src="change-api.js" ></script>
+    <!-- Link to the backend API -->
+    <script src="change-api.js"></script>
 </body>
 </html>
