Fixing the button colour and hover

--- a/change.html
+++ b/change.html
@@ -23,7 +23,7 @@
             <!-- Button that triggers fetching a new quote when clicked -->
             <button onclick="fetchQuote()">New quote</button>
             <!-- Link styled as a button -->
-            <a href="Eloquent-expressions.html" class="button">Home</a>
+            <button onclikc="Eloquent-expressions.html"> Home</button>
         </div>
     </div>
 
