--- a/change.html
+++ b/change.html
@@ -22,7 +22,7 @@
         <div>
             <!-- Button that triggers fetching a new quote when clicked -->
             <button onclick="fetchQuote()">New quote</button>
-            <!-- Link styled as a button -->
+            <!-- Button that takes the user home -->
             <button onclikc="Eloquent-expressions.html"> Home</button>
         </div>
     </div>
