--- a/education.html
+++ b/education.html
@@ -22,6 +22,8 @@
         <div>
             <!--Button that triggers fetching a new quote when clicked-->
             <button onclick="fetchQuote()">New quote</button>
+            <!-- Button that takes the user home -->
+            <button onclikc="Eloquent-expressions.html"> Home</button>
         </div>
     </div>
 
