--- a/family.html
+++ b/family.html
@@ -23,7 +23,7 @@
                 <!--Button that triggers fetching a new quote when clicked-->
                 <button onclick="fetchQuote()">New quote</button>
                 <!-- Button that takes the user home -->
-                <button onclikc="Eloquent-expressions.html"> Home</button>
+                <button onclikc="https://eloquent-expressions.surge.sh/"> Home</button>
             </div>
         </div>
 
