--- a/success.html
+++ b/success.html
@@ -24,7 +24,7 @@
                 <!--Button that triggers fetching a new quote when clicked-->
                 <button onclick="fetchQuote()">New quote</button>
                 <!-- Button that takes the user home -->
-                <button onclikc="Eloquent-expressions.html"> Home</button>
+                <button onclikc="https://eloquent-expressions.surge.sh/Eloquent-expressions.html"> Home</button>
             </div>
         </div>
     
