Fixing the link and adding twitter sharing

--- a/change.html
+++ b/change.html
@@ -23,7 +23,7 @@
             <!-- Button that triggers fetching a new quote when clicked -->
             <button onclick="fetchQuote()">New quote</button>
             <!-- Button that takes the user home -->
-            <button onclikc="https://eloquent-expressions.surge.sh/"> Home</button>
+            <button onclick="//eloquent-expressions.surge.sh/Eloquent-expressions.html"> Home</button>
         </div>
     </div>
 
