Removing the home button and adding the tweet button

--- a/Quote-of-the-day.html
+++ b/Quote-of-the-day.html
@@ -25,6 +25,8 @@
                 <button onclick="fetchQuote()">New quote</button>
             <!-- Button that takes the user home -->
             <button onclikc="Eloquent-expressions.html"> Home</button>
+            <!-- Button that allows the user to tweet a quote-->
+            <button onclick="tweet()"></button> 
             </div>
         </div>
 
