--- a/happiness.html
+++ b/happiness.html
@@ -22,8 +22,8 @@
             <div>
                 <!--Button that triggers fetching a new quote clicked-->
                 <button onclick="fetchQuote()">New quote</button>
-            <!-- Button that takes the user home -->
-            <button onclick="//eloquent-expressions.surge.sh/Eloquent-expressions.html"> Home</button>
+                <!-- Button that allows the user to tweet a quote-->
+                <button onclick="tweet()"></button> 
             </div>
         </div>
     
