--- a/success.html
+++ b/success.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Success</title>
-    <link rel="stylesheet" href="success.css">
-</head>
-<body>
-    <div class="quote-box">
-        <h2>Quotes about Success</h2>
-        <blockquote id="quote-text"></blockquote>
-        <span id="quote-author"></span>
-        <div>
-            <button onclick="fetchQuote()">New quote</button>
-            <button onclick="window.location.href='//eloquent-expressions.surge.sh/Eloquent-expressions.html'">Home</button>
-            <button onclick="tweet()">Tweet</button>
+    <head>
+        <!--Meta charset declaration for proper character encoding-->
+        <meta charset="UTF-8">
+        <!--Sets the viewport to make the website responsive on different devices-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--Title of the webpage displayed in the browser tab-->
+        <title>Success</title>
+        <!--Link to external CSS stlylsheets for styling in the page-->
+        <link rel="stylesheet" href="success.css">
+    </head>
+    <body>
+        <!--Container for displaying the quote-->
+        <div class="quote-box">
+            <!--Header for the section-->
+            <!--Span element to show the quote text-->
+            <h2>Quotes about Success</h2>
+            <!--Container for the button to fetch a new quote-->
+            <blockquote id="quote-text"></blockquote>
+            <!--Container for the button to fetch a new quote-->
+            <span id="quote-author"></span>
+            <div>
+                <!--Button that triggers fetching a new quote when clicked-->
+                <button onclick="fetchQuote()">New quote</button>
+                <!-- Button that allows the user to tweet a quote-->
+                <button onclick="tweet()"></button> 
+            </div>
         </div>
-    </div>
     
-    <script src="success-api.js"></script>
-</body>
-</html>
+        <!--Link to the backend api-->
+        <script src="success-api.js"></script>
+        
+    </body>
+    </html>
