Fixing the button

--- a/Quote-of-the-day.html
+++ b/Quote-of-the-day.html
@@ -26,7 +26,7 @@
             <!-- Button that takes the user home -->
             <button onclikc="Eloquent-expressions.html"> Home</button>
             <!-- Button that allows the user to tweet a quote-->
-            <button onclick="tweet()"></button> 
+            <button onclick="tweet()">Tweet</button> 
             </div>
         </div>
 
