--- a/health.html
+++ b/health.html
@@ -23,7 +23,7 @@
             <!--Button that triggers fetching a new qote when clicked-->
             <button onclick="fetchQuote()">New quote</button>
                 <!-- Button that allows the user to tweet a quote-->
-                <button onclick="tweet()"></button> 
+                <button onclick="tweet()">Tweet</button> 
         </div>
     </div>
 
