Fixing the index to include tweets

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2>Features</h2>
         <p><strong>Quote of the Day:</strong> Discover a new quote daily to kickstart your inspiration.</p>
         <p><strong>Categorized Quotes:</strong> Browse quotes organized into different themes.</p>
-        <p><strong>Favorites:</strong> Save and revisit your favorite quotes effortlessly.</p>
+        <p><strong>Tweet</strong> Tweet your favourite quotes</p>
     </section>
 
     <footer>
