Trying a home button on the container

--- a/inspiration.html
+++ b/inspiration.html
@@ -30,5 +30,11 @@
 
     <!-- Link to the backend API JavaScript file -->
     <script src="inspiration-api.js"></script>
+
+    <script>
+        function goHome() {
+            window.location.href = 'Eloquent-Expressions.html';
+        }
+    </script>
 </body>
 </html>
