Fixing the code and referances

--- a/inspiration.html
+++ b/inspiration.html
@@ -13,6 +13,8 @@
 <body>
     <!-- Container for displaying the quote -->
     <div class="quote-box">
+        <!-- Home button -->
+        <button class="home-button" onclick="goHome()">Home</button>
         <!-- Header for the section -->
         <h2>Quotes to Inspire</h2>
         <!-- Blockquote element to show the quote text -->
@@ -33,7 +35,7 @@
 
     <script>
         function goHome() {
-            window.location.href = 'Eloquent-Expressions.html';
+            window.location.href = 'Eloquent-expressions.html ';
         }
     </script>
 </body>
