FIXING THE colour and width of the  box

--- a/inspiration.html
+++ b/inspiration.html
@@ -24,7 +24,7 @@
         <!-- Container for the button to fetch a new quote -->
         <div>
             <!-- Button that triggers fetching a new quote when clicked -->
-            <button onclick="fetchQuote()">New quote</button>
+            <button onclick="fetchQuote()">Alternative quote</button>
                 <!-- Button that allows the user to tweet a quote-->
                 <button onclick="tweet()">Tweet</button> 
         </div>
