--- a/change.html
+++ b/change.html
@@ -21,7 +21,7 @@
         <span id="quote-author"></span>
         <div>
             <!-- Button that triggers fetching a new quote when clicked -->
-            <button onclick="fetchQuote()">New quote</button>
+            <button onclick="fetchQuote()">Alternative quote</button>
             <!-- Button that allows the user to tweet a quote-->
             <button onclick="tweet()">Tweet</button> 
         </div>
