--- a/Quote-of-the-day.html
+++ b/Quote-of-the-day.html
@@ -30,5 +30,13 @@
 
         <!--Link to the backend api-->
         <script src="Quote-api.js"></script>
+
+        <script>
+            // Button in the top right corner to go home 
+            function goHome() {
+                window.location.href = ' Eloquent-expressions.html '; 
+            }
+        </script>
+
     </body>
     </html>
