--- a/change.html
+++ b/change.html
@@ -29,5 +29,13 @@
 
     <!-- Link to the backend API -->
     <script src="change-api.js"></script>
+
+    <script>
+        // Button in the top right corner to go home 
+        function goHome() {
+            window.location.href = ' Eloquent-expressions.html '; 
+        }
+    </script>
+
 </body>
 </html>
