--- a/death.html
+++ b/death.html
@@ -29,5 +29,13 @@
 
     <!--Link to the back-end API-->
     <script src="death-api.js"></script>
+
+    <script>
+        // Button in the top right corner to go home 
+        function goHome() {
+            window.location.href = ' Eloquent-expressions.html '; 
+        }
+    </script>
+    
 </body>
 </html>
