--- a/famous.html
+++ b/famous.html
@@ -28,5 +28,12 @@
 
     <!--Link to the back-end API-->
     <script src="famous-api.js"></script>
+
+    <script>
+        // Button in the top right corner to go home 
+        function goHome() {
+            window.location.href = ' Eloquent-expressions.html '; 
+        }
+    </script>
 </body>
 </html>
