--- a/happiness.html
+++ b/happiness.html
@@ -29,5 +29,12 @@
     
         <!--Link to the back-end API-->
         <script src="hapiness-api.js"></script>
+
+        <script>
+            // Button in the top right corner to go home 
+            function goHome() {
+                window.location.href = ' Eloquent-expressions.html '; 
+            }
+        </script>
     </body>
     </html>
