--- a/health.html
+++ b/health.html
@@ -29,5 +29,12 @@
 
     <!--Link to the backedn api-->
     <script src="health-api.js"></script>
+
+    <script>
+        // Button in the top right corner to go home 
+        function goHome() {
+            window.location.href = ' Eloquent-expressions.html '; 
+        }
+    </script>
 </body>
 </html>
