--- a/hope.html
+++ b/hope.html
@@ -29,6 +29,14 @@
     
         <!--Link to the backend api-->
         <script src="hope-api.js"></script>
+
+        <script>
+            // Button in the top right corner to go home 
+            function goHome() {
+                window.location.href = ' Eloquent-expressions.html '; 
+            }
+        </script>
+
     </body>
     </html>
 
