--- a/success.html
+++ b/success.html
@@ -31,5 +31,12 @@
         <!--Link to the backend api-->
         <script src="success-api.js"></script>
         
+        <script>
+            // Button in the top right corner to go home 
+            function goHome() {
+                window.location.href = ' Eloquent-expressions.html '; 
+            }
+        </script>
+
     </body>
     </html>
