Fixing the colour of the buttons to hover blue and be pink

--- a/love.html
+++ b/love.html
@@ -13,8 +13,10 @@
     <body>
         <!--Container for displaying the quote-->
         <div class="quote-box">
+            <!-- Home button -->
+            <button class="home-button" onclick="goHome()">Home</button>
             <!--Header for the section-->
-            <h2>Quotes to Love</h2>
+            <h2>Quotes about Love</h2>
             <!--Span element to show the quote text-->
             <blockquote id="quote-text"></blockquote>
             <!--Container for the button to fetch a new quote-->
