--- a/success.html
+++ b/success.html
@@ -14,6 +14,8 @@
         <!--Container for displaying the quote-->
         <div class="quote-box">
             <!--Header for the section-->
+            <!-- Home button -->
+            <button class="home-button" onclick="goHome()">Home</button>
             <!--Span element to show the quote text-->
             <h2>Quotes about Success</h2>
             <!--Container for the button to fetch a new quote-->
