--- a/death.html
+++ b/death.html
@@ -13,6 +13,8 @@
 <body>
     <!--Container for displaying the quote-->
     <div class="quote-box">
+        <!-- Home button -->
+        <button class="home-button" onclick="goHome()">Home</button>
         <!--Header for the section-->
         <h2>Quotes about Death</h2>
         <!--Span element to show the quote text-->
@@ -36,6 +38,6 @@
             window.location.href = ' Eloquent-expressions.html '; 
         }
     </script>
-    
+
 </body>
 </html>
