--- a/famous.html
+++ b/famous.html
@@ -12,6 +12,8 @@
     </head>
     <!--Container for displaying the quote-->
     <div class="quote-box">
+        <!-- Home button -->
+        <button class="home-button" onclick="goHome()">Home</button>
         <!--Header for the section-->
         <h2>Famous Quotes</h2>
         <!--Span element to show the quote text-->
