--- a/forgiveness.html
+++ b/forgiveness.html
@@ -13,6 +13,8 @@
     <body>
         <!--Container for displaying the quote-->
         <div class="quote-box">
+             <!-- Home button -->
+            <button class="home-button" onclick="goHome()">Home</button>
             <!--Header for the section-->
             <h2>Quotes about forgiveness</h2>
             <!--Span element to show the quote text-->
