Fixing capitalisation issues

--- a/Eloquent-expressions.html
+++ b/Eloquent-expressions.html
@@ -44,14 +44,14 @@
         <div class="container">
             <h2>Quote Category</h2>
             <ul class="category-list">
-                <li><a href="change.html">Quotes about change</a></li>
+                <li><a href="change.html">Quotes about Change</a></li>
                 <li><a href="death.html">Quotes about Death</a></li>
                 <li><a href="education.html">Quotes about Education</a></li>
                 <li><a href="family.html">Quotes about Family</a></li>
                 <li><a href="famous.html">Quotes From Famous People</a></li>
-                <li><a href="forgiveness.html">Quotes about forgiveness</a></li>
+                <li><a href="forgiveness.html">Quotes about Forgiveness</a></li>
                 <li><a href="friendship.html">Quotes about Friendship</a></li>
-                <li><a href="happiness.html">Quotes about happiness</a></li>
+                <li><a href="happiness.html">Quotes about Happiness</a></li>
                 <li><a href="health.html">Quotes about Health</a></li>
                 <li><a href="hope.html">Quotes about Hope</a></li>
                 <li><a href="inspiration.html">Quotes to Inspire</a></li>
