--- a/Eloquent-expressions.html
+++ b/Eloquent-expressions.html
@@ -39,6 +39,7 @@
             <p>Generates random quotes under any category. Start your day with a dose of inspiration from our Quote of the Day feature. Every day, you'll receive a fresh, thought-provoking quote selected from our extensive database. Let these words of wisdom set a positive tone for your day.</p>
             <br>
             <a href="Quote-of-the-day.html">Daily Quotes</a>
+            <br>
             <img src="Second quote.jpg" class="center">
         </div>
     </section>
@@ -47,16 +48,17 @@
         <div class="container">
             <h2>Quote Category</h2>
             <p>Choose from a number of different categories. Whether you're feeling a little down or in need of some inspiration, we have a category for you. Our diverse selection includes:</p>
-                
-                <li>Inspiration: Discover quotes that spark creativity and ignite your inner drive.</li>
-                <li>Love: Heartfelt quotes about love and relationships.</li>
-                <li>Happiness: Find joy and positivity in these uplifting quotes.</li>
-                <li>Wisdom: Timeless advice and profound thoughts.</li>
-                <li>Success: Quotes to help you achieve your goals and dreams.</li>
-                <li>Life: Reflect on life's journey with these insightful quotes.</li>
-                <li>Friendship: Celebrate the bonds that make life special.</li>
-                <li>Explore our categories to find the perfect quote for any mood or occasion.</p></li>
-                <br>
+
+            <ul>
+                <li><b>Inspiration:</b> Discover quotes that spark creativity and ignite your inner drive.</li>
+                <li><b>Love:</b> Heartfelt quotes about love and relationships.</li>
+                <li><b>Happiness:</b> Find joy and positivity in these uplifting quotes.</li>
+                <li><b>Wisdom:</b> Timeless advice and profound thoughts.</li>
+                <li><b>Success:</b> Quotes to help you achieve your goals and dreams.</li>
+                <li><b>Life:</b> Reflect on life's journey with these insightful quotes.</li>
+                <li><b>Friendship:</b> Celebrate the bonds that make life special.</li>
+            </ul>
+            <br>
             <ul class="category-list">
                 <li><a href="change.html">Quotes about Change</a></li>
                 <li><a href="death.html">Quotes about Death</a></li>
