Updating the layout of the landing page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="description" content="Eloquent Expressions - Discover inspiring quotes and find motivation in the words of others.">
     <title>Eloquent Expressions</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-    </style>
 </head>
 <body>
     <header>
@@ -22,23 +20,29 @@
         </nav>        
     </header>
 
-    <section id="intro" class="container">
-        <h2>Are You Seeking Inspiration? Looking for a Fresh Perspective? Want to be Motivated by the Words of Others?</h2>
-        <p>Welcome to Eloquent Expressions, where we curate inspiring quotes from various categories.</p>
-    </section>
+    <main>
+        <section id="intro" class="container">
+            <h2>Are You Seeking Inspiration? Looking for a Fresh Perspective? Want to be Motivated by the Words of Others?</h2>
+            <p>Welcome to Eloquent Expressions, where we curate inspiring quotes from various categories.</p>
+        </section>
 
-    <section id="about" class="container">
-        <h2>About Us</h2>
-        <p>I'm a student at ALX looking to delve into the world of Software Engineering. As a student facing challenges, staying motivated has often been tough. That's why I created Eloquent Expressions.</p>
-        <p>Through this website, I aim to share quotes that have personally motivated me and offer insights into the thoughts of others. Join us in shaping our journeys and inspiring each other to achieve more.</p>
-    </section>
+        <section id="about" class="container">
+            <h2>About Us</h2>
+            <p>I'm a student at ALX looking to delve into the world of Software Engineering. As a student facing challenges, staying motivated has often been tough. That's why I created Eloquent Expressions.</p>
+            <p>Through this website, I aim to share quotes that have personally motivated me and offer insights into the thoughts of others. Join us in shaping our journeys and inspiring each other to achieve more.</p>
+        </section>
 
-    <section id="features" class="container">
-        <h2>Features</h2>
-        <p><strong>Quote of the Day:</strong> Discover a new quote daily to kickstart your inspiration.</p>
-        <p><strong>Categorized Quotes:</strong> Browse quotes organized into different themes.</p>
-        <p><strong>Tweet</strong> Tweet your favourite quotes</p>
-    </section>
+        <section id="features" class="container">
+            <h2>Features</h2>
+            <p><strong>Quote of the Day:</strong> Discover a new quote daily to kickstart your inspiration.</p>
+            <p><strong>Categorized Quotes:</strong> Browse quotes organized into different themes.</p>
+            <p><strong>Tweet:</strong> Tweet your favourite quotes</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Eloquent Expressions. All rights reserved.</p>
+    </footer>
 
     <script>
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
@@ -50,10 +54,5 @@
             });
         });
     </script>
-    
-
-    <footer>
-        <p>&copy; 2024 Eloquent Expressions. All rights reserved.</p>
-    </footer>
 </body>
 </html>
