--- a/happiness.html
+++ b/happiness.html
@@ -16,7 +16,7 @@
             <!-- Home button -->
             <button class="home-button" onclick="goHome()">Home</button>
             <!--Header for the section-->
-            <h2>Quotes about happiness</h2>
+            <h2>Quotes about Happiness</h2>
             <!--Span element to show the quote text-->
             <blockquote id="quote-text"></blockquote>
             <!--Container for the button to fetch a new quote-->
