Fixing the referancing for the files and creating the folders

--- a/html/death.html
+++ b/html/death.html
@@ -8,7 +8,7 @@
     <!--Title of the webpage displayed in the browser tab-->
     <title>Quotes about Death</title>
     <!--Link to external CSS stylingsheets for styling the page-->
-    <link rel="stylesheet" href="death.css">
+    <link rel="stylesheet" href="../CSS/death.css">
 </head>
 <body>
     <!--Container for displaying the quote-->
@@ -30,7 +30,7 @@
     </div>
 
     <!--Link to the back-end API-->
-    <script src="death-api.js"></script>
+    <script src="../JS/death-api.js"></script>
 
     <script>
         // Button in the top right corner to go home 
