--- a/html/education.html
+++ b/html/education.html
@@ -8,7 +8,7 @@
     <!--Title of webpage displaying -->
     <title>Quotes about Education</title>
     <!--Link to external CSS Stylesheets for styling the page -->
-    <link rel="stylesheet" href="education.css">
+    <link rel="stylesheet" href="../CSS/education.css">
 </head>
 <body>
     <!--Container for displaying the quote-->
@@ -30,7 +30,7 @@
     </div>
 
     <!--Link to the backend api-->
-    <script src="education-api.js"></script>
+    <script src="../JS/education-api.js"></script>
 
     <script>
         // Button in the top right corner to go home 
