--- a/html/Quote-of-the-day.html
+++ b/html/Quote-of-the-day.html
@@ -8,7 +8,7 @@
         <!--Title of the webpage displayed in the browser tab-->
         <title>Quote of the day</title>
         <!--Link to external CSS stylesheets for styling the page-->
-        <link rel="stylesheet" href="quote-daily.css">
+        <link rel="stylesheet" href="../CSS/quote-daily.css">
     </head>
     <body>
         <!--Container for displaying the quote-->
@@ -31,7 +31,7 @@
         </div>
 
         <!--Link to the backend api-->
-        <script src="Quote-api.js"></script>
+        <script src="../JS/Quote-api.js"></script>
 
         <script>
             // Button in the top right corner to go home 
