--- a/html/change.html
+++ b/html/change.html
@@ -8,7 +8,7 @@
     <!-- Title of the webpage displayed in the browser tab -->
     <title>Quotes about Change</title>
     <!-- Link to external CSS stylesheets for styling the page -->
-    <link rel="stylesheet" href="change.css">
+    <link rel="stylesheet" href="../CSS/change.css">
 </head>
 <body>
     <!-- Container for displaying the quote -->
@@ -30,7 +30,7 @@
     </div>
 
     <!-- Link to the backend API -->
-    <script src="change-api.js"></script>
+    <script src="../JS/change-api.js"></script>
 
     <script>
         // Button in the top right corner to go home 
