--- a/html/family.html
+++ b/html/family.html
@@ -8,7 +8,7 @@
         <!--Title of the webpage displayed in the brower page -->
         <title>Family Quotes</title>
         <!--Link to external CSS stylesheets for styling the page-->
-        <link rel="stylesheet" href="family.css">
+        <link rel="stylesheet" href="../CSS/family.css">
     </head>
     <body>
         <!--Container for displaying the quote-->
@@ -30,7 +30,7 @@
         </div>
 
         <!--Link to the backend api-->
-        <script src="family-api.js"></script>
+        <script src="../JS/family-api.js"></script>
 
         <script>
             // Button in the top right corner to go home 
