--- a/html/famous.html
+++ b/html/famous.html
@@ -8,7 +8,7 @@
         <!--Title of the webpage displayed in the browser tab-->
         <title>Famous</title>
         <!--Link to external CSS stylingsheets for styling the page-->
-        <link rel="stylesheet" href="famous.css">
+        <link rel="stylesheet" href="../CSS/famous.css">
     </head>
     <!--Container for displaying the quote-->
     <div class="quote-box">
@@ -29,7 +29,7 @@
     </div>
 
     <!--Link to the back-end API-->
-    <script src="famous-api.js"></script>
+    <script src="../JS/famous-api.js"></script>
 
     <script>
         // Button in the top right corner to go home 
