--- a/html/forgiveness.html
+++ b/html/forgiveness.html
@@ -8,7 +8,7 @@
         <!--Title of the webpage displayed in the browser tab-->
         <title>Forgiveness</title>
         <!--Link to external CSS stylesheets for styling the page -->
-        <link rel="stylesheet" href="forgiveness.css">
+        <link rel="stylesheet" href="../CSS/forgiveness.css">
     </head>
     <body>
         <!--Container for displaying the quote-->
@@ -30,7 +30,7 @@
         </div>
     
         <!--Link to the backend api-->
-        <script src="forgiveness-api.js"></script>
+        <script src="../JS/forgiveness-api.js"></script>
 
         <script>
             // Button in the top right corner to go home 
