--- a/html/friendship.html
+++ b/html/friendship.html
@@ -8,7 +8,7 @@
         <!--Title of the webpage displayed in the browser tab-->
         <title>Friendship</title>
         <!--Link to the external CSS stylesheets for styling the page-->
-        <link rel="stylesheet" href="friendship.css">
+        <link rel="stylesheet" href="../CSS/friendship.css">
     </head>
     <body>
         <!--Container for displaying the quote-->
@@ -30,7 +30,7 @@
         </div>
     
         <!--Link to the back-end api-->
-        <script src="friendship-api.js"></script>
+        <script src="../JS/friendship-api.js"></script>
 
         <script>
             // Button in the top right corner to go home 
