--- a/html/happiness.html
+++ b/html/happiness.html
@@ -8,7 +8,7 @@
         <!--Title of the webpage displayed in the browser tab-->
         <title>Happiness</title>
         <!--Link to external CSS styling sheet for styling the page-->
-        <link rel="stylesheet" href="happiness.css">
+        <link rel="stylesheet" href="../CSS/happiness.css">
     </head>
     <body>
         <!--Container for displaying the quote-->
@@ -30,7 +30,7 @@
         </div>
     
         <!--Link to the back-end API-->
-        <script src="hapiness-api.js"></script>
+        <script src="../JS/hapiness-api.js"></script>
 
         <script>
             // Button in the top right corner to go home 
