--- a/html/health.html
+++ b/html/health.html
@@ -8,7 +8,7 @@
         <!--Title of the webpage displayed in the browser tab-->
         <title>Health</title>
         <!--Link to the external CSS Stylesheets for styling the page-->
-        <link rel="stylesheet" href="health.css">
+        <link rel="stylesheet" href="../CSS/health.css">
     </head>
     <body>
         <!--Container for displaying the quote-->
@@ -30,7 +30,7 @@
     </div>
 
     <!--Link to the backedn api-->
-    <script src="health-api.js"></script>
+    <script src="../JS/health-api.js"></script>
 
     <script>
         // Button in the top right corner to go home 
