--- a/html/hope.html
+++ b/html/hope.html
@@ -8,7 +8,7 @@
         <!--Title of the webpage displayed in the browser tab-->
         <title>Hope</title>
         <!--Link to the external CSS stylesheets for styling the page-->
-        <link rel="stylesheet" href="hope.css";>
+        <link rel="stylesheet" href="../CSS/hope.css";>
     </head>
     <body>
         <!--Container for displaying the quote-->
@@ -30,7 +30,7 @@
         </div>
     
         <!--Link to the backend api-->
-        <script src="hope-api.js"></script>
+        <script src="../JS/hope-api.js"></script>
 
         <script>
             // Button in the top right corner to go home 
