--- a/html/inspiration.html
+++ b/html/inspiration.html
@@ -8,7 +8,7 @@
     <!-- Title of the webpage displayed in the browser tab -->
     <title>Inspiration</title>
     <!-- Link to external CSS stylesheets for styling the page -->
-    <link rel="stylesheet" href="inspiration.css">
+    <link rel="stylesheet" href="../CSS/inspiration.css">
 </head>
 <body>
     <!-- Container for displaying the quote -->
@@ -31,7 +31,7 @@
     </div>
 
     <!-- Link to the backend API JavaScript file -->
-    <script src="inspiration-api.js"></script>
+    <script src="../JS/inspiration-api.js"></script>
 
     <script>
         function goHome() {
