--- a/html/love.html
+++ b/html/love.html
@@ -8,7 +8,7 @@
         <!--Tile of the webpage displayed in the browser tab-->
         <title>Love</title>
         <!--Link to external CSS stylesheets for styling the page-->
-        <link rel="stylesheet" href="love.css">
+        <link rel="stylesheet" href="../CSS/love.css">
     </head>
     <body>
         <!--Container for displaying the quote-->
@@ -30,7 +30,7 @@
         </div>
     
         <!--Link to the backend-->
-        <script src="love-api.js"></script>
+        <script src="../JS/love-api.js"></script>
 
         <script>
             // Button in the top right corner to go home 
