--- a/html/success.html
+++ b/html/success.html
@@ -8,7 +8,7 @@
         <!--Title of the webpage displayed in the browser tab-->
         <title>Success</title>
         <!--Link to external CSS stlylsheets for styling in the page-->
-        <link rel="stylesheet" href="success.css">
+        <link rel="stylesheet" href="../CSS/success.css">
     </head>
     <body>
         <!--Container for displaying the quote-->
@@ -31,7 +31,7 @@
         </div>
     
         <!--Link to the backend api-->
-        <script src="success-api.js"></script>
+        <script src="../JS/success-api.js"></script>
         
         <script>
             // Button in the top right corner to go home 
